2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Update version in stdout file automatically.
	* autotest.at: Here.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Doxygen HTML rendering.
	* doxygen/doxygen.css: Use JRL documentation style.
	* doxygen/footer.html: Simplify footer.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Add scripts for maintainers from the GNU C library.
	* announce-gen: New.
	* git-version-gen: New.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Add missing m4 file.
	* pkg.m4: New.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove trailing whitespaces.
	* doxygen/doxygen.css: Here.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Doxygen generation rules.
	* doxygen.m4: Fix copyright.
	* doxygen.mk: New.
	* doxygen/Doxyfile.in: New.
	* doxygen/doxygen.css: New.
	* doxygen/footer.html: New.
	* doxygen/header.html: New.
	* doxygen/header.tex: New.
	* doxygen/style.rtf: New.
	* doxygen/style.tex: New.
	* doxygen/tabs.css: New.
	* sf-upload.sh.in: New.
	* sf.mk: Copy from doxygen.m4.

2009-07-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Beautify Autotest output, capture Valgrind log.
	* autotest.at: Display what command line has been
	called and capture ``valgrind.log''.

2009-07-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Ipopt Autoconf macros.
	* acx_pthread.m4: New.
	* ipopt.m4: New.

2009-07-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Create new build-aux branch.
	* autotest.at: Rename from build-aux/autotest.at.
	* autotest.mk: Rename from build-aux/autotest.mk.
	* boost.m4: Rename from build-aux/boost.m4.
	* bootstrap: Rename from build-aux/bootstrap.
	* config.guess: Rename from build-aux/config.guess.
	* config.sub: Rename from build-aux/config.sub.
	* deb.mk: Rename from build-aux/deb.mk.
	* depcomp: Rename from build-aux/depcomp.
	* doc/Doxyfile.in: Remove.
	* doc/Makefile.am: Remove.
	* doc/Makefile.in: Remove.
	* doc/doxygen.css: Remove.